--- a/src/styles/EditButton.css
+++ b/src/styles/EditButton.css
@@ -2,7 +2,7 @@
   background-color: rgb(0, 75, 255);
   color: white;
   position: fixed;
-  bottom: 15px;
+  bottom: 10px;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.5rem;
@@ -16,11 +16,11 @@
 }
 
 .EditButton:hover {
-  bottom: 13px;
+  bottom: 8px;
   box-shadow: 0 2px blue;
 }
 
 .EditButton:active {
-  bottom: 11px;
+  bottom: 6px;
   box-shadow: 0 0;
 }
