--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -6,6 +6,7 @@
 .Education-container {
   padding: 1.5rem;
   font-size: 1.2rem;
+  max-width: 100%;
 }
 
 .Education-title {
