--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   padding: 1.5rem;
   font-size: 1.2rem;
+  max-width: 100%;
 }
 
 .Job-container {
